# eeg-channel-adaptation

./: .gitignore  README.md  pyproject.toml  setup_env.sh
adapter_finetuning/: __init__.py  optim.py
scripts/: preprocess_interpolate.py  preprocess_luna_native.py  preprocess_omneeg.py  run_cbramod_experiments.py  run_eegpt_experiments.py  run_interpolate_experiments.py  run_luna_experiments.py  run_neurogpt_experiments.py  run_omneeg_experiments.py
slurm/: dataset_sweep.slurm  dummy_sanity_test.slurm  luna_recheck.slurm
