[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapter_finetuning"
version = "0.1.0"
description = "Parameter-efficient fine-tuning framework for EEG foundation models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bruno Aristimunha"}
]

dependencies = [
    "braindecode @ git+https://github.com/braindecode/braindecode.git",
    "moabb @ git+https://github.com/NeuroTechX/moabb.git",
    "eegprep>=0.2.23",
    "exca>=0.5.10",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "peft>=0.14.0",
    "transformers>=4.46.0",
    "pytorch-lightning>=2.6.0",
    "tensorboardX",
    "wandb",
    "hydra-submitit-launcher",
    "eegdash",
    "hydra-joblib-launcher>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter_finetuning*"]
exclude = ["data*", "logs*", "submitit_logs*", ".cache*", "eegdash_cache*", "checkpoints*",  "results*", "checkpoints*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
