[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapter_finetuning"
version = "0.1.0"
description = "Parameter-efficient fine-tuning framework for EEG foundation models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bruno Aristimunha"}
]

dependencies = [
    # deep learning
    "torch",
    "pytorch-lightning>=2.0",
    "torchmetrics",
    "einops",
    "transformers>=4.46.0",
    "huggingface_hub",
    "safetensors",
    # EEG foundation models + dataset access
    "braindecode @ git+https://github.com/braindecode/braindecode.git",
    "moabb @ git+https://github.com/NeuroTechX/moabb.git",
    "mne",
    # numerics / io / logging
    "h5py",
    "numpy",
    "scipy",
    "pandas",
    "wandb",
]

[project.optional-dependencies]
slurm = ["submitit"]        # only needed for the --slurm self-submit path
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter_finetuning*"]
exclude = ["data*", "logs*", "submitit_logs*", ".cache*", "eegdash_cache*", "checkpoints*",  "results*", "checkpoints*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
